fix typo -> isTurnedOn
